--- a/reference-supported-relationships.adoc
+++ b/reference-supported-relationships.adoc
@@ -87,7 +87,7 @@ Cloud Sync enables you to sync data from a source to a target. This is called a 
 * SMB server
 * StorageGRID
 
-| Azure Data Lake Gen2 a|
+| Azure Data Lake Storage Gen2 a|
 
 * IBM Cloud Object Storage
 * NFS server
@@ -232,6 +232,7 @@ Cloud Sync enables you to sync data from a source to a target. This is called a 
 | ONTAP S3 Storage a|
 
 * Amazon S3
+* Azure Data Lake Storage Gen2
 * Google Cloud Storage
 * NFS server
 * SMB server
